Fix messages icon alignment

--- a/sass/modules/_messages.sass
+++ b/sass/modules/_messages.sass
@@ -14,6 +14,7 @@
 			content: ""
 			display: inline-block
 			vertical-align: middle
+			margin-top: -2px
 			margin-right: 4px
 			width: 21px
 			height: 21px
